# tdlib-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: build-tdlib.yml  cd.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml
tdlib-rust/: Cargo.toml  build.rs
tdlib-rust-gen/: Cargo.toml
tdlib-rust-gen/src/: enums.rs  functions.rs  lib.rs  metadata.rs  rustifier.rs  types.rs
tdlib-rust-parser/: Cargo.toml
tdlib-rust-parser/src/: errors.rs  lib.rs  tl_iterator.rs
tdlib-rust-parser/src/tl/: category.rs  definition.rs  mod.rs  parameter.rs  ty.rs
tdlib-rust/examples/: get_me.rs  test_ci.rs
tdlib-rust/src/: generated.rs  lib.rs  observer.rs
