[package]
name = "tdlib-rust-gen"
version = "1.0.0"
authors = [
    "ANKDDEV",
]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ankddev/tdlib-rust"
repository = "https://github.com/ankddev/tdlib-rust"
documentation = "https://docs.rs/tdlib-rust-gen"
keywords = [
    "tdlib",
    "telegram",
    "codegen",
    "api",
    "tdlib-rust"
]
description = "Rust code generator from TDLib's API definitions."

[dependencies]
tdlib-rust-parser = { path = "../tdlib-rust-parser", version = "1.0.0" }
