[package]
name = "tdlib-rust"
version = "1.0.0"
authors = ["ANKDDEV"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ankddev/tdlib-rust"
repository = "https://github.com/ankddev/tdlib-rust"
documentation = "https://docs.rs/tdlib-rust"
keywords = [
    "telegram",
    "tdlib",
    "tdjson",
    "telegram-api",
    "tdlib-rust",
]
description = "Rust wrapper around the Telegram Database Library."
readme = "../README.md"

[package.metadata.docs.rs]
features = ["docs", "bots-only-api"]

[package.metadata.system-deps]
tdjson = "1.8.42"

[features]
# The default feature build the library using the local tdlib library
default = []
# This feature is used to enable the functions only available to the Telegram bots
bots-only-api = []
# This feature is used to build the documentation preventing linking to the tdjson library
docs = []
# This feature is used to build the library using the tdlib library installed in the system
local-tdlib = []
# This feature is used to build the library using pkg-config
pkg-config = ["dep:system-deps"]
# This feature is used to build the library using the tdlib library downloaded from github
download-tdlib = ["dep:reqwest", "dep:zip"]

[dependencies]
log = "0.4"
futures-channel = "0.3"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.2"
system-deps = { version = "7", optional = true }
reqwest = { version = "0.12.4", features = ["blocking"], optional = true }
zip = { version = "2.0.0", optional = true }
dirs = "5.0.1"

[build-dependencies]
tdlib-rust-gen = { path = "../tdlib-rust-gen", version = "1.0.0" }
tdlib-rust-parser = { path = "../tdlib-rust-parser", version = "1.0.0" }
system-deps = { version = "7", optional = true }
reqwest = { version = "0.12.4", features = ["blocking"], optional = true }
zip = { version = "2.0.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
